Fixed equation align end

--- a/style.scss
+++ b/style.scss
@@ -49,12 +49,12 @@ main {
 }
 
 #equation {
-    align-self: flex-end;
+    text-align: end;
     padding: 0.25em 0;
 }
 
 #currentNum {
-    align-self: flex-end;
+    text-align: end;
     font-size: 2.5rem;
     font-weight: 600;
     text-align: end;
